--- a/GE.WebAdmin/Views/Users/_UsersOnSite.cshtml
+++ b/GE.WebAdmin/Views/Users/_UsersOnSite.cshtml
@@ -28,8 +28,10 @@
                                 <li>
                                     <div><strong>@item.NikName</strong></div>
                                     <div><a href="mailto:@item.Email">@item.Email</a></div>
+                                    <div>@item.RoleNames</div>
                                 </li>
                             </ul>
+                            
                         </div>
                     </div>
                 }
