--- a/GE.WebUI/Content/less/for-gamers-block.less
+++ b/GE.WebUI/Content/less/for-gamers-block.less
@@ -196,7 +196,8 @@ f-g-b .games > li > a:hover {
 }
 
 .pv-article .foreword{
-    font-size:1.2em;
+    font-size:13px;
+    font-family:Arial;
 }
 
 .f-g-b .btn-transparent.red {
