--- a/GE.WebUI/Views/Games/DisplayTemplates/VMImgGame.cshtml
+++ b/GE.WebUI/Views/Games/DisplayTemplates/VMImgGame.cshtml
@@ -2,17 +2,20 @@
 @{
     Layout = null;
     var loadImg = ViewData["LoadImg"] != null ? (bool)ViewData["LoadImg"] : false;
+    var materials = ViewData["Materials"] as VMImgGameMaterial[];
 }
 
 <div class="game-good-img">
     <figure>
-        <img alt="@Model.Title - положительное изображение" @(string.Format("{0}={1}", loadImg?"src":"data-src", Model.GoodPictureUrl+"?width="+Model.ImgWidth)) />
+        <img alt="@Model.Title - новости" @(string.Format("{0}={1}", loadImg?"src":"data-src", Model.GoodPictureUrl+"?width="+Model.ImgWidth)) />
     </figure>
+    @Html.Partial(MVC.Games.Views._LastMaterials, materials.Where(x=>x.ModelCoreType==SX.WebCore.Enums.ModelCoreType.News).ToArray())
 </div>
 <div class="game-bad-img">
     <figure>
-        <img alt="@Model.Title - отрицательное изображение" @(string.Format("{0}={1}", loadImg ? "src" : "data-src", Model.BadPictureUrl+"?width="+Model.ImgWidth)) />
+        <img alt="@Model.Title - статьи" @(string.Format("{0}={1}", loadImg ? "src" : "data-src", Model.BadPictureUrl+"?width="+Model.ImgWidth)) />
     </figure>
+    @Html.Partial(MVC.Games.Views._LastMaterials, materials.Where(x => x.ModelCoreType == SX.WebCore.Enums.ModelCoreType.Article).ToArray())
 </div>
 <div class="game-icon-wrapper">
     <img alt="@Model.Title - иконка" @(string.Format("{0}={1}", loadImg ? "src" : "data-src", Model.IconUrl+"?height="+Model.IconHeight)) />
