--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     ViewBag.H1CssClass = "hidden";
 }
 
-@Html.Action(MVC.News.LastNewsBlock())
+@Html.Action(MVC.News.LastGamesNewsBlock())
 
 @Html.Action(MVC.Articles.ForGamersBlock())
 
