--- a/GE.WebUI/Content/less/game-list.less
+++ b/GE.WebUI/Content/less/game-list.less
@@ -260,10 +260,32 @@
 .glm {
     position: absolute;
     bottom: 0;
-    border: 1px solid red;
     left: 20px;
-    height: 100px;
     width: 60%;
+    z-index: 1;
+    background-color: #fff;
+    border: 1px solid #BABABA;
+    box-shadow: -4px -4px 4px rgba(0,0,0,0.1);
+    padding: 10px;
+    border-bottom:none;
+    border-radius: 3px 3px 0 0;
+    max-height:100%;
+    @media (max-width: @screen-xs-max) {
+        right:0;
+        left:unset;
+        background-color: rgba(0,0,0, 0.5);
+        overflow-y:auto;
+        border-color:#5F5A5A;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .glm > ul {
@@ -279,4 +301,16 @@
 .glm > ul > li > a {
     line-height:1;
     color:#000;
+    @media (max-width: @screen-xs-max) {
+        color:@color-white;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
