--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -92,29 +92,6 @@
     }
 }
 
-.m-info .like i {
-    font-size: 1.5em;
-    cursor: pointer;
-}
-
-.m-info .like i.up {
-    color: @color-green;
-}
-
-.m-info .like i.down {
-    color: @color-red;
-}
-
-.m-info .like span {
-    margin-left: 10px;
-    font-size: 1.2em;
-    font-weight: 700;
-}
-
-.m-info .like span.up {
-    margin-right: @def-pad*2;
-}
-
 .mat-fwd {
     margin: 0;
     padding: 10px;
@@ -151,4 +128,13 @@
 
 .m-info .btn.down .fa, .m-info .btn.down .badge {
     color: @color-red;
+}
+
+
+.m-info .likes .up i{
+    color:@color-green;
+}
+
+.m-info .likes .down i{
+    color:@color-green;
 }
