--- a/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
+++ b/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
@@ -26,6 +26,7 @@
     }
 </figure>
 <div class="content">
+    <i class="text-muted small">Инфорграфика по статистике для статьи в разработке</i><br />
     <a class="link" href="@Url.Action(MVC.Articles.Details(year, month, day, titleUrl))" title="@Model.Title">@Model.Title</a>
     <p class="foreword">
         @Model.Foreword
