https://github.com/EugeneKormin/Game-exe/issues/58

--- a/GE.WebAdmin/Content/less/signin.less
+++ b/GE.WebAdmin/Content/less/signin.less
@@ -14,6 +14,11 @@
     vertical-align: middle;
     max-width:100%;
     padding:0 15px;
+    color: #fff;
+}
+
+.form-signin a{
+    color: #fff;
 }
 
 .validation-summary-errors > ul {
