--- a/GE.WebAdmin/Views/Account/Login.cshtml
+++ b/GE.WebAdmin/Views/Account/Login.cshtml
@@ -27,7 +27,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background: url('../../Content/i/background.jpg') center / cover;">
     <div class="form-block">
         <form class="form-signin" method="post" action="@Url.Action(MVC.Account.Login())">
             @Html.AntiForgeryToken()
