--- a/GE.WebAdmin/Views/Home/Index.cshtml
+++ b/GE.WebAdmin/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Index";
 }
 
-<h3>Добро пожаловать на борт <span class="text-primary">@Constants.AppName</span>, @User.Identity.Name !</h3>
+<h3>Добро пожаловать на борт <span class="text-primary">@SX.WebCore.Resources.Settings.adminPanelName</span>, @User.Identity.Name !</h3>
 <br />
 
 <h4><strong>Сейчас в админ-панеле</strong></h4>
