--- a/GE.WebAdmin/Views/Pictures/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Pictures/_GridView.cshtml
@@ -21,7 +21,7 @@
         },
         PagerInfo=pagerInfo,
         Filter = filter,
-        SortDirections = sortDirections
+        SortDirections = sortDirections,
     },
         new { @class = "table table-condensed table-bordered table-responsive table-striped" }
     )
