--- a/GE.WebAdmin/Views/Shared/EditorTemplates/EditGame.cshtml
+++ b/GE.WebAdmin/Views/Shared/EditorTemplates/EditGame.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="edit-game sx-find-table" data-is-load="false" data-url="/games/findtable" data-page="1">
+﻿<div class="edit-game sx-find-gv" data-is-load="false" data-url="/games/findgridview">
     <input type="hidden" name="@Html.NameForModel()" value="@Html.ValueForModel()" />
     <div class="input-group">
         <input type="text" class="form-control" placeholder="Выберите игру" value="@ViewBag.GameTitle">
