--- a/GE.WebAdmin/Views/Account/Login.cshtml
+++ b/GE.WebAdmin/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>@(!string.IsNullOrEmpty(ViewBag.Title) ? ViewBag.Title + " | " + Constants.AppName : Constants.AppName)</title>
+    <title>@(!string.IsNullOrEmpty(ViewBag.Title) ? ViewBag.Title + " | " + SX.WebCore.Resources.Settings.adminPanelName : SX.WebCore.Resources.Settings.adminPanelVersion)</title>
     <link rel="icon" href="~/faveicon.png" type="image/png" />
 
     <!-- Bootstrap -->
@@ -32,7 +32,7 @@
         <form class="form-signin" method="post" action="@Url.Action(MVC.Account.Login())">
             @Html.AntiForgeryToken()
 
-            <h2 class="form-signin-heading">@Constants.AppName</h2>
+            <h2 class="form-signin-heading">@SX.WebCore.Resources.Settings.adminPanelName</h2>
             <br />
             @Html.LabelFor(x => x.Email, new { @class = "sr-only" })
             @Html.EditorFor(x => x.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Адрес электронной почты" } })
