--- a/GE.WebAdmin/Views/Shared/EditorTemplates/EditImage.cshtml
+++ b/GE.WebAdmin/Views/Shared/EditorTemplates/EditImage.cshtml
@@ -1,10 +1,13 @@
-﻿<div class="edit-img sx-find-table" data-is-load="false" data-url="/pictures/findtable" data-page="1">
+﻿<div class="edit-img sx-find-gv" data-is-load="false" data-url="/pictures/findgridview">
     <input type="hidden" name="@Html.NameForModel()" value="@Html.ValueForModel()" />
     <div class="input-group">
         <input type="text" class="form-control" placeholder="Выберите изображение" value="@Html.ValueForModel()">
         <span class="input-group-btn">
             <button class="btn btn-default" type="button">Выбрать</button>
+            <button class="btn btn-default" type="button"><i class="fa fa-repeat"></i></button>
         </span>
     </div>
-    <div class="dropdown"></div>
+    <div class="dropdown">
+        
+    </div>
 </div>
