--- a/GE.WebAdmin/Views/Shared/EditorTemplates/EditMaterialCategory.cshtml
+++ b/GE.WebAdmin/Views/Shared/EditorTemplates/EditMaterialCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@{ 
     var mct = (SX.WebCore.Enums.ModelCoreType)ViewData.ModelMetadata.AdditionalValues["mct"];
 }
-<div class="edit-material-category sx-find-table" data-is-load="false" data-url="@Url.Action(MVC.MaterialCategories.FindTable(mct: mct))" data-page="1">
+<div class="edit-material-category sx-find-gv" data-is-load="false" data-url="@Url.Action(MVC.MaterialCategories.FindTable(mct: mct))" data-page="1">
     <input type="hidden" name="@Html.NameForModel()" value="@Html.ValueForModel()" />
     <div class="input-group">
         <input type="text" class="form-control" placeholder="Выберите категорию" value="@ViewBag.MaterialCategoryTitle">
