--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>@(!string.IsNullOrEmpty(ViewBag.Title) ? ViewBag.Title + " | " + Constants.AppName : Constants.AppName)</title>
+    <title>@(!string.IsNullOrEmpty(ViewBag.Title) ? ViewBag.Title + " | " + SX.WebCore.Resources.Settings.adminPanelName : SX.WebCore.Resources.Settings.adminPanelVersion)</title>
     <link rel="icon" href="~/faveicon.png" type="image/png" />
 
     <!-- Bootstrap -->
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">@Constants.AppName</a>
+                <a class="navbar-brand" href="/">@SX.WebCore.Resources.Settings.adminPanelName @SX.WebCore.Resources.Settings.adminPanelVersion</a>
             </div>
            
             <ul class="nav navbar-top-links navbar-right">
@@ -381,7 +381,7 @@
                                     </li>
                                 }
                                 <li>
-                                    <a href="~/releasenotes.txt">История выпусков</a>
+                                    <a href="@Url.Action(MVC.Settings.ReleaseNotes())">История выпусков</a>
                                 </li>
                             </ul>
                         </li>
@@ -397,7 +397,7 @@
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4">@Constants.AppName</div>
+                <div class="col-md-4">@SX.WebCore.Resources.Settings.adminPanelName</div>
                 <div class="col-md-8">
                     <div class="pull-right">
                         Разработка и поддержка: <a href="mailto:simlex.dev.2014@gmail.com">simlex.dev.2014@gmail.com</a>
