--- a/GE.WebUI/Content/less/last-category-news-block.less
+++ b/GE.WebUI/Content/less/last-category-news-block.less
@@ -4,8 +4,8 @@
 
 @l-c-n-b-a-color: #2d3e50;
 
-.l-c-n-b{
-    margin-top:@def-pad*2;
+.l-c-n-b {
+    margin-top: @def-pad*2;
 }
 
 .l-c-n-b .row {
@@ -143,4 +143,65 @@
 
 .l-c-n-b .content .menu a > .title {
     margin-left: 90px;
+}
+
+.l-c-n-b .content .category-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: @def-pad @def-pad @def-pad 0;
+}
+
+.l-c-n-b .content .category-wrapper > ul {
+    height: 100%;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    margin-left: -@def-pad;
+}
+
+.l-c-n-b .content .category-wrapper > ul > li {
+    overflow: hidden;
+    float: left;
+    padding-left: @def-pad;
+    height: 100%;
+    position: relative;
+    width: 25%;
+}
+
+.l-c-n-b .content .category-wrapper > ul > li > a {
+    display: block;
+    height: 100%;
+}
+
+.l-c-n-b .content .category-wrapper > ul > li > a > figure {
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+}
+
+.l-c-n-b .lcnb-news {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 0;
+    background-color: @color-game-menu;
+}
+
+.l-c-n-b .lcnb-news > li {
+    
+}
+
+.l-c-n-b .lcnb-news > li > a {
+    color: @color-white;
+    font-size: 13px;
+    font-style: italic;
+    line-height: 1;
+    display: block;
+    padding:5px;
+}
+
+.l-c-n-b .lcnb-news > li > a:hover {
+    font-weight:700;
 }
